--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,12 +26,18 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Setup netcat
+      - name: Setup brew
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-    
+      - name: Installing Netcat
+        run: | 
+          brew install netcat
+          nc --help
+        
 
       # Runs a set of commands using the runners shell
       - name: Starting
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+           echo "Hello dear" 
+          
+          
+  
